--- a/notebooks/ImageClassifier.ipynb
+++ b/notebooks/ImageClassifier.ipynb
@@ -44,7 +44,7 @@
     "    for label in os.listdir(f\"dataset/animal_face_dataset/{i}\"):\n",
     "        for image in os.listdir(f\"dataset/animal_face_dataset/{i}/{label}\"):\n",
     "            image_path.append(f\"dataset/animal_face_dataset/{i}/{label}/{image}\")\n",
-    "            labels.append(label)\n"
+    "            labels.append(label)"
    ]
   },
   {
@@ -123,8 +123,8 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(zip(image_path, labels), columns=['image_path', \"label\"])\n",
-    "df.head()\n"
+    "df = pd.DataFrame(zip(image_path, labels), columns=[\"image_path\", \"label\"])\n",
+    "df.head()"
    ]
   },
   {
@@ -192,11 +192,11 @@
     "\n",
     "transform = transforms.Compose(\n",
     "    [\n",
-    "        transforms.Resize((128,128)),\n",
+    "        transforms.Resize((128, 128)),\n",
     "        transforms.ToTensor(),\n",
-    "        transforms.ConvertImageDtype(torch.float)\n",
+    "        transforms.ConvertImageDtype(torch.float),\n",
     "    ]\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -228,19 +228,21 @@
    "outputs": [],
    "source": [
     "class CustomImageDataset(Dataset):\n",
-    "    def __init__(self,dataframe, transforms = None):\n",
+    "    def __init__(self, dataframe, transforms=None):\n",
     "        self.dataframe = dataframe\n",
     "        self.transforms = transforms\n",
-    "        self.labels = torch.tensor(label_encoder.transform(dataframe['label'])).to(device)\n",
-    "    \n",
+    "        self.labels = torch.tensor(label_encoder.transform(dataframe[\"label\"])).to(\n",
+    "            device\n",
+    "        )\n",
+    "\n",
     "    def __len__(self):\n",
     "        return self.dataframe.shape[0]\n",
-    "    \n",
+    "\n",
     "    def __getitem__(self, idx):\n",
-    "        img_path = self.dataframe.iloc[idx,0]\n",
+    "        img_path = self.dataframe.iloc[idx, 0]\n",
     "        label = self.labels[idx]\n",
     "\n",
-    "        image = Image.open(img_path).convert('RGB')\n",
+    "        image = Image.open(img_path).convert(\"RGB\")\n",
     "\n",
     "        if self.transforms:\n",
     "            image = self.transforms(image).to(device)\n",
@@ -255,9 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = CustomImageDataset(dataframe=train,transforms=transform)\n",
-    "val_dataset = CustomImageDataset(dataframe=val,transforms=transform)\n",
-    "test_dataset = CustomImageDataset(dataframe=test,transforms=transform)"
+    "train_dataset = CustomImageDataset(dataframe=train, transforms=transform)\n",
+    "val_dataset = CustomImageDataset(dataframe=val, transforms=transform)\n",
+    "test_dataset = CustomImageDataset(dataframe=test, transforms=transform)"
    ]
   },
   {
@@ -281,12 +283,12 @@
     "n_rows = 3\n",
     "n_cols = 3\n",
     "\n",
-    "f, axarr = plt.subplots(n_rows,n_cols)\n",
+    "f, axarr = plt.subplots(n_rows, n_cols)\n",
     "\n",
     "for row in range(n_rows):\n",
     "    for col in range(n_cols):\n",
-    "        image = Image.open(df.sample(n=1)[\"image_path\"].iloc[0]).convert('RGB')\n",
-    "        axarr[row,col].imshow(image)\n",
+    "        image = Image.open(df.sample(n=1)[\"image_path\"].iloc[0]).convert(\"RGB\")\n",
+    "        axarr[row, col].imshow(image)\n",
     "\n",
     "plt.show()"
    ]
@@ -310,9 +312,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = DataLoader(train_dataset,batch_size=BATCH_SIZE, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset,batch_size=BATCH_SIZE, shuffle=True)\n",
-    "test_loader = DataLoader(test_dataset,batch_size=BATCH_SIZE, shuffle=True)"
+    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
@@ -323,19 +325,18 @@
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(3,32,kernel_size = 3,padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3,padding=1)\n",
-    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3,padding=1)\n",
+    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, padding=1)\n",
     "\n",
-    "        self.pooling = nn.MaxPool2d(2,2)\n",
+    "        self.pooling = nn.MaxPool2d(2, 2)\n",
     "        self.relu = nn.ReLU()\n",
     "\n",
     "        self.flatten = nn.Flatten()\n",
-    "        self.linear = nn.Linear((128*16*16), 128)\n",
-    "        self.output = nn.Linear(128, len(df['label'].unique()))\n",
+    "        self.linear = nn.Linear((128 * 16 * 16), 128)\n",
+    "        self.output = nn.Linear(128, len(df[\"label\"].unique()))\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
@@ -375,7 +376,8 @@
    "outputs": [],
    "source": [
     "from torchsummary import summary\n",
-    "summary(model, input_size = (3,128,128))"
+    "\n",
+    "summary(model, input_size=(3, 128, 128))"
    ]
   },
   {
@@ -385,8 +387,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "criterion = nn.CrossEntropyLoss() \n",
-    "optimizer = Adam(model.parameters(), lr=LR) "
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = Adam(model.parameters(), lr=LR)"
    ]
   },
   {
@@ -396,7 +398,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "total_loss_train_plot = []\n",
     "total_loss_validation_plot = []\n",
     "total_acc_train_plot = []\n",
@@ -404,39 +405,42 @@
     "\n",
     "\n",
     "for epoch in range(EPOCHS):\n",
-    "  total_acc_train = 0\n",
-    "  total_loss_train = 0\n",
-    "  total_loss_val = 0\n",
-    "  total_acc_val = 0\n",
+    "    total_acc_train = 0\n",
+    "    total_loss_train = 0\n",
+    "    total_loss_val = 0\n",
+    "    total_acc_val = 0\n",
     "\n",
-    "  for inputs, labels in train_loader:\n",
-    "    optimizer.zero_grad()\n",
-    "    outputs = model(inputs)\n",
-    "    train_loss = criterion(outputs, labels)\n",
-    "    total_loss_train += train_loss.item()\n",
-    "    train_loss.backward()\n",
+    "    for inputs, labels in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        train_loss = criterion(outputs, labels)\n",
+    "        total_loss_train += train_loss.item()\n",
+    "        train_loss.backward()\n",
     "\n",
-    "    train_acc = (torch.argmax(outputs, axis = 1) == labels).sum().item()\n",
-    "    total_acc_train += train_acc\n",
-    "    optimizer.step()\n",
+    "        train_acc = (torch.argmax(outputs, axis=1) == labels).sum().item()\n",
+    "        total_acc_train += train_acc\n",
+    "        optimizer.step()\n",
     "\n",
-    "  with torch.no_grad():\n",
-    "    for inputs, labels in val_loader:\n",
-    "      outputs = model(inputs)\n",
-    "      val_loss = criterion(outputs, labels)\n",
-    "      total_loss_val += val_loss.item()\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in val_loader:\n",
+    "            outputs = model(inputs)\n",
+    "            val_loss = criterion(outputs, labels)\n",
+    "            total_loss_val += val_loss.item()\n",
     "\n",
-    "      val_acc = (torch.argmax(outputs, axis = 1) == labels).sum().item()\n",
-    "      total_acc_val += val_acc\n",
+    "            val_acc = (torch.argmax(outputs, axis=1) == labels).sum().item()\n",
+    "            total_acc_val += val_acc\n",
     "\n",
-    "  total_loss_train_plot.append(round(total_loss_train/1000, 4))\n",
-    "  total_loss_validation_plot.append(round(total_loss_val/1000, 4))\n",
-    "  total_acc_train_plot.append(round(total_acc_train/(train_dataset.__len__())*100, 4))\n",
-    "  total_acc_validation_plot.append(round(total_acc_val/(val_dataset.__len__())*100, 4))\n",
-    "  print(f'''Epoch {epoch+1}/{EPOCHS}, Train Loss: {round(total_loss_train/100, 4)} Train Accuracy {round((total_acc_train)/train_dataset.__len__() * 100, 4)}\n",
-    "              Validation Loss: {round(total_loss_val/100, 4)} Validation Accuracy: {round((total_acc_val)/val_dataset.__len__() * 100, 4)}''')\n",
-    "  print(\"=\"*25)\n",
-    "  "
+    "    total_loss_train_plot.append(round(total_loss_train / 1000, 4))\n",
+    "    total_loss_validation_plot.append(round(total_loss_val / 1000, 4))\n",
+    "    total_acc_train_plot.append(\n",
+    "        round(total_acc_train / (train_dataset.__len__()) * 100, 4)\n",
+    "    )\n",
+    "    total_acc_validation_plot.append(\n",
+    "        round(total_acc_val / (val_dataset.__len__()) * 100, 4)\n",
+    "    )\n",
+    "    print(f\"\"\"Epoch {epoch + 1}/{EPOCHS}, Train Loss: {round(total_loss_train / 100, 4)} Train Accuracy {round((total_acc_train) / train_dataset.__len__() * 100, 4)}\n",
+    "              Validation Loss: {round(total_loss_val / 100, 4)} Validation Accuracy: {round((total_acc_val) / val_dataset.__len__() * 100, 4)}\"\"\")\n",
+    "    print(\"=\" * 25)"
    ]
   },
   {
@@ -451,14 +455,15 @@
     "    total_acc_test = 0\n",
     "    for input, label in test_loader:\n",
     "        prediction = model(input)\n",
-    "       \n",
-    "        acc = (torch.argmax(prediction, axis = 1) == label).sum().item()\n",
+    "\n",
+    "        acc = (torch.argmax(prediction, axis=1) == label).sum().item()\n",
     "        total_acc_test += acc\n",
     "        test_loss = criterion(prediction, label)\n",
     "        total_loss_test += test_loss.item()\n",
     "\n",
-    "    print(f\"Accuracy Score is: {round((total_acc_test/test_dataset.__len__()) * 100, 4)} and Loss is {round(total_loss_test/1000, 4)}\")\n",
-    "     "
+    "    print(\n",
+    "        f\"Accuracy Score is: {round((total_acc_test / test_dataset.__len__()) * 100, 4)} and Loss is {round(total_loss_test / 1000, 4)}\"\n",
+    "    )"
    ]
   },
   {
@@ -468,21 +473,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(15, 5))\n",
     "\n",
-    "axs[0].plot(total_loss_train_plot, label='Training Loss')\n",
-    "axs[0].plot(total_loss_validation_plot, label='Validation Loss')\n",
-    "axs[0].set_title('Training and Validation Loss over Epochs')\n",
-    "axs[0].set_xlabel('Epochs')\n",
-    "axs[0].set_ylabel('Loss')\n",
+    "axs[0].plot(total_loss_train_plot, label=\"Training Loss\")\n",
+    "axs[0].plot(total_loss_validation_plot, label=\"Validation Loss\")\n",
+    "axs[0].set_title(\"Training and Validation Loss over Epochs\")\n",
+    "axs[0].set_xlabel(\"Epochs\")\n",
+    "axs[0].set_ylabel(\"Loss\")\n",
     "axs[0].legend()\n",
     "\n",
-    "axs[1].plot(total_acc_train_plot, label='Training Accuracy')\n",
-    "axs[1].plot(total_acc_validation_plot, label='Validation Accuracy')\n",
-    "axs[1].set_title('Training and Validation Accuracy over Epochs')\n",
-    "axs[1].set_xlabel('Epochs')\n",
-    "axs[1].set_ylabel('Accuracy')\n",
+    "axs[1].plot(total_acc_train_plot, label=\"Training Accuracy\")\n",
+    "axs[1].plot(total_acc_validation_plot, label=\"Validation Accuracy\")\n",
+    "axs[1].set_title(\"Training and Validation Accuracy over Epochs\")\n",
+    "axs[1].set_xlabel(\"Epochs\")\n",
+    "axs[1].set_ylabel(\"Accuracy\")\n",
     "axs[1].legend()\n",
     "\n",
     "plt.tight_layout()\n",
@@ -498,12 +502,13 @@
    "outputs": [],
    "source": [
     "def predict_image(image_path):\n",
-    "  image = Image.open(image_path).convert('RGB')\n",
-    "  image = transform(image).to(device)\n",
+    "    image = Image.open(image_path).convert(\"RGB\")\n",
+    "    image = transform(image).to(device)\n",
     "\n",
-    "  output = model(image.unsqueeze(0))\n",
-    "  output = torch.argmax(output, axis = 1).item()\n",
-    "  return label_encoder.inverse_transform([output])\n",
+    "    output = model(image.unsqueeze(0))\n",
+    "    output = torch.argmax(output, axis=1).item()\n",
+    "    return label_encoder.inverse_transform([output])\n",
+    "\n",
     "\n",
     "path = \"dataset/test/cat.jpg\"\n",
     "## Visualize the image\n",
